stateDiagram-v2
    direction LR
    [*] --> BACKLOG
    BACKLOG --> PLANNED : promote
    BACKLOG --> GRAVEYARD : reject
    PLANNED --> GRAVEYARD : reject
    PLANNED --> IN_PROGRESS : claim
    IN_PROGRESS --> DONE : seal / merge
    IN_PROGRESS --> BLOCKED
    BLOCKED --> IN_PROGRESS
    GRAVEYARD --> BACKLOG : reopen
